--- a/.github/workflows/nox-lint_multi-arch.yml
+++ b/.github/workflows/nox-lint_multi-arch.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10", "3.11", "3.12", "3.13"]
-    name: Python ${{ matrix.python-version }} django_start
+    name: Python ${{ matrix.python-version }} learning-log
     steps:
       - uses: actions/checkout@v4
         with:
@@ -18,7 +18,8 @@ jobs:
           allow-prereleases: true
           architecture: x64
       - run: pip install nox==2024.10.09
-      - run: pip install poetry==1.8.5
+      - run: pip install poetry==2.0.1
+      - run: pip install poetry-plugin-export==1.9.0
       - run: |
           export SECRET_KEY=${{secrets.SECRET_KEY}}
           export EMAIL_HOST_PASSWORD=${{secrets.EMAIL_HOST_PASSWORD}}
