Upgrade Django & psycopg. Resolves #500

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,12 @@ version = "0.3.2"
 description = "A Django web application for creating learning lists"
 requires-python = ">=3.10.0, <3.14.0"
 dependencies = [
-    "Django (==5.1.4)",
+    "Django (==5.1.5)",
     "django-allauth (>=65.0, <66.0.0)",
     "environs[django] (>=11.0, <15.0)",
     "django-extensions (>=3.2.0, <3.3.0)",
     "whitenoise (>=6.8.0, <6.9.0)",
-    "psycopg[binary] (==3.2.3)",
+    "psycopg[binary] (==3.2.4)",
     "Pillow (>=11.0, <12.0)",
     "gunicorn (>=23.0.0, <24.0.0)",
     # crispy-bootstrap4 uses calver, so version is unclamped
@@ -57,7 +57,7 @@ Repository = "https://github.com/kevinbowen777/learning-log.git"
 Documentation = "file:///docs/_build/index.html"
 
 [tool.poetry.group.dev.dependencies]
-django-debug-toolbar = ">=4.0.0, <5.0.0"
+django-debug-toolbar = ">=5.0.0, <6.0.0"
 pre-commit = ">=4.0, <5.0"
 ruff = ">=0.8, <1.0"
 nox = "2024.10.09"
@@ -208,6 +208,7 @@ exclude = [
 
 [tool.ruff.lint]
 select = [
+    "A",    # flake8-builtins
     "B",    # flake8-bugbear
     "C90",  # mccabe
     "DJ",   # flake8-django
@@ -241,6 +242,7 @@ dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 "config/test.py" = ["S101", "S106"]
 "pages/tests/*" = ["S101", "S106"]
 "learning_logs/tests/*" = ["S101", "S106"]
+"docs/conf.py" = ["A001"]
 
 [tool.ruff.lint.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
