--- a/.github/workflows/nox-lint_multi-arch.yml
+++ b/.github/workflows/nox-lint_multi-arch.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.11", "3.12", "3.13"]
+        python-version: ["3.11", "3.12", "3.13", "3.14"]
     name: Python ${{ matrix.python-version }} learning-log
     steps:
       - uses: actions/checkout@v4
@@ -17,7 +17,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
           allow-prereleases: true
           architecture: x64
-      - run: pip install nox==2025.05.01
+      - run: pip install nox==2025.10.16
       - run: pip install poetry==2.2.1
       - run: pip install poetry-plugin-export==1.9.0
       - run: |
