--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,15 +2,15 @@
 name = "learning-log"
 version = "0.3.3"
 description = "A Django web application for creating learning lists"
-requires-python = ">=3.11.0, <3.14.0"
+requires-python = ">=3.11.0"
 dependencies = [
     "Django (==5.2.7)",
     "django-allauth (>=65.0, <66.0.0)",
     "environs[django] (>=11.0, <15.0)",
     "django-extensions (>=4.1.0, <4.2.0)",
     "whitenoise (>=6.9.0, <7.0.0)",
-    "psycopg[binary] (==3.2.10)",
-    "Pillow (>=11.0, <12.0)",
+    "psycopg[binary] (==3.2.12)",
+    "Pillow (>=12.0, <13.0)",
     "gunicorn (>=23.0.0, <24.0.0)",
     # crispy-bootstrap4 uses calver, so version is unclamped
     "crispy-bootstrap4 (>=2024.10)",
@@ -44,6 +44,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Topic :: Internet :: WWW/HTTP",
 ]
 
@@ -56,17 +57,20 @@ Documentation = "file:///docs/_build/index.html"
 [tool.poetry]
 package-mode = false
 
+[tool.poetry.dependencies]
+python = ">=3.11.0, <3.15.0"
+
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = ">=5.0.0, <6.0.0"
 pre-commit = ">=4.0, <5.0"
 ruff = ">=0.8, <1.0"
-nox = "2025.05.01"
+nox = "2025.10.16"
 pytest = ">=8.4.0, <8.5.0"
-pytest-cov = ">=6.0.0, <7.0"
+pytest-cov = ">=7.0.0, <8.0"
 pytest-django = ">=4.5.2, <5.0.0"
-pytest-sugar = "1.0.0"
+pytest-sugar = "1.1.1"
 coverage = { version = ">=7.0.0, <8.0.0", extras = ["toml"] }
-django-coverage-plugin = ">=3.0.0, <3.2.0"
+django-coverage-plugin = ">=3.2.0, <3.3.0"
 sphinx = ">= 8.0, <9.0"
 djlint = ">=1.31.0, <1.40.0"
 sphinx-lint = "1.0"
@@ -139,7 +143,7 @@ ignore = ["docs/_build"]
 defineConstant = { DEBUG = true }
 stubPath = ""
 # The following may need to be modified when collaborating with others
-venv = "learning-log-3s6_931d-py3.13"
+venv = "learning-log-3s6_931d-py3.14"
 venvPath = "../../../venvs"
 # More portable venv config
 # venvPath = "."
@@ -161,11 +165,11 @@ reportUnnecessaryCast = "warning"
 reportUnnecessaryComparison = "error"
 reportUnnecessaryTypeIgnoreComment = "warning"
 
-pythonVersion = "3.13"
+pythonVersion = "3.14"
 pythonPlatform = "Linux"
 
 executionEnvironments = [
-  { root = ".", pythonVersion = "3.13", extraPaths = [ "accounts", "config", "pages", "learning_logs" ] },
+  { root = ".", pythonVersion = "3.14", extraPaths = [ "accounts", "config", "pages", "learning_logs" ] },
 ]
 
 [tool.pytest.ini_options]
@@ -188,8 +192,8 @@ unsafe-fixes = false
 line-length = 88
 indent-width = 4
 
-# Assume Python 3.13.x
-target-version = "py313"
+# Assume Python 3.14.x
+target-version = "py314"
 
 # Exclude a variety of commonly ignored directories.
 exclude = [
